- Added maven pom files to help IDEs with the new directory structure - Added Jenkinsfiles to allow building of sub-modules

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -33,7 +33,7 @@
   <version>0.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Training</name>
+  <name>Training: Website</name>
   <description>
     Write something sensible here ...
   </description>
