- Some random change to trigger a build

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -35,7 +35,7 @@
 
   <name>Training: Website</name>
   <description>
-    Write something sensible here ...
+    Write something really sensible here ...
   </description>
   <url>https://training.apache.org</url>
   <inceptionYear>2019</inceptionYear>
