--- a/site/Jenkinsfile
+++ b/site/Jenkinsfile
@@ -69,7 +69,7 @@ pipeline {
         stage('Build site') {
             steps {
                 echo 'Building Site'
-                sh 'mvn site'
+                sh 'mvn -f site/pom.xml site'
             }
         }
 
@@ -77,7 +77,7 @@ pipeline {
             steps {
                 echo 'Staging Site'
                 // Build a directory containing the aggregated website.
-                sh 'mvn site:stage'
+                sh 'mvn -f site/pom.xml site:stage'
 
                 /* Enable this as soon as we have multiple modules
                 // Make sure the script is executable.
@@ -95,7 +95,7 @@ pipeline {
             steps {
                 echo 'Deploying Site'
                 // Publish the site with the scm-publish plugin.
-                sh 'mvn scm-publish:publish-scm'
+                sh 'mvn -f site/pom.xml scm-publish:publish-scm'
             }
         }
     }
