- Get rid of some maven warnings related to our directory structure - Make the job deploy the site even if it's not develop (for testing ... will change this back)

--- a/site/Jenkinsfile
+++ b/site/Jenkinsfile
@@ -90,7 +90,7 @@ pipeline {
 
         stage('Deploy site') {
             when {
-                branch 'master'
+                branch 'feature/changed-directory-structure'
             }
             steps {
                 echo 'Deploying Site'
