- Configured an agent node type

--- a/tools/maven-revealjs-asciidoctor-templte/Jenkinsfile
+++ b/tools/maven-revealjs-asciidoctor-templte/Jenkinsfile
@@ -20,6 +20,12 @@
  */
 pipeline {
 
+    agent {
+        node {
+            label 'ubuntu'
+        }
+    }
+
     tools {
         maven 'Maven 3 (latest)'
         jdk 'JDK 1.8 (latest)'
