- Preparation for merging back to master.

--- a/site/Jenkinsfile
+++ b/site/Jenkinsfile
@@ -106,7 +106,7 @@ pipeline {
         stage('Deploy site') {
             when {
                 changeset "site/**"
-                branch 'feature/changed-directory-structure'
+                branch 'master'
             }
             steps {
                 echo 'Deploying Site'
@@ -121,7 +121,7 @@ pipeline {
         // If this build failed, send an email to the list.
         failure {
             script {
-                if(env.BRANCH_NAME == "develop") {
+                if(env.BRANCH_NAME == "master") {
                     emailext(
                         subject: "[Website][BUILD-FAILURE]: Job '${env.JOB_NAME} [${env.BRANCH_NAME}] [${env.BUILD_NUMBER}]'",
                         body: """
@@ -138,7 +138,7 @@ Check console output at "<a href="${env.BUILD_URL}">${env.JOB_NAME} [${env.BRANC
         // If this build didn't fail, but there were failing tests, send an email to the list.
         unstable {
             script {
-                if(env.BRANCH_NAME == "develop") {
+                if(env.BRANCH_NAME == "master") {
                     emailext(
                         subject: "[Website][BUILD-UNSTABLE]: Job '${env.JOB_NAME} [${env.BRANCH_NAME}] [${env.BUILD_NUMBER}]'",
                         body: """
@@ -158,7 +158,7 @@ Check console output at "<a href="${env.BUILD_URL}">${env.JOB_NAME} [${env.BRANC
             // (in this cae we probably don't have to do any post-build analysis)
             deleteDir()
             script {
-                if ((env.BRANCH_NAME == "develop") && (currentBuild.previousBuild != null) && (currentBuild.previousBuild.result != 'SUCCESS')) {
+                if ((env.BRANCH_NAME == "master") && (currentBuild.previousBuild != null) && (currentBuild.previousBuild.result != 'SUCCESS')) {
                     emailext (
                         subject: "[Website][BUILD-STABLE]: Job '${env.JOB_NAME} [${env.BRANCH_NAME}] [${env.BUILD_NUMBER}]'",
                         body: """
