--- a/content/ApacheWay/NavigatingASFIncubation/pom.xml
+++ b/content/ApacheWay/NavigatingASFIncubation/pom.xml
@@ -213,8 +213,6 @@
                             <sourceDirectory>src/main/asciidoc</sourceDirectory>
                             <!-- Configure the target director to where will the output be generated -->
                             <outputDirectory>${project.slides.directory}</outputDirectory>
-                            <!-- output file-->
-	                        <outputFile>index.html</outputFile>
                             <!-- Enable optional modules for generating diagrams and charts -->
                             <requires>
                                 <require>asciidoctor-diagram</require>
@@ -284,6 +282,24 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.14.v20181114</version>
+            </plugin>
+            <plugin>
+                <groupId>com.coderplus.maven.plugins</groupId>
+                <artifactId>copy-rename-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <id>rename-slide-file</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>rename</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>${project.slides.directory}/${project.main.contentfile}.revealjs</sourceFile>
+                            <destinationFile>${project.slides.directory}/${project.main.contentfile}.html</destinationFile>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.coderplus.maven.plugins</groupId>
