Fix Apache spelling

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -37,7 +37,7 @@
 
   <name>Training: Website</name>
   <description>
-   Website for the Apaxceh Training project
+   Website for the Apache Training project
   </description>
   <url>https://training.apache.org</url>
   <inceptionYear>2019</inceptionYear>
