--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+**/target
+**/.gradle
+**/.idea
+**/build
+gen
+**/.DS_Store
+*.iml
+out/**
+*.iws
