--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,10 +10,10 @@ log4j = "2.20.0"
 jetty = "9.4.51.v20230217"
 jersey = "2.39.1"
 mockito = "3.12.4"
-hive-v230 = "2.3.9"
 airlift-units = "1.8"
 airlift-log = "231"
-hadoop2 = "2.7.2"
+hive2 = "2.3.9"
+hadoop2 = "2.7.3"
 
 protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
@@ -49,8 +49,8 @@ jersey-hk2 = { group = "org.glassfish.jersey.inject", name = "jersey-hk2", versi
 jersey-test-framework-core = { group = "org.glassfish.jersey.test-framework", name = "jersey-test-framework-core", version.ref = "jersey" }
 jersey-test-framework-provider-jetty = { group = "org.glassfish.jersey.test-framework.providers", name = "jersey-test-framework-provider-jetty", version.ref = "jersey" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
-hive-metastrore-v230 = { group = "org.apache.hive", name = "hive-metastore", version.ref = "hive-v230"}
-hive-exec-v230 = { group = "org.apache.hive", name = "hive-exec", version.ref = "hive-v230"}
+hive2-metastore = { group = "org.apache.hive", name = "hive-metastore", version.ref = "hive2"}
+hive2-exec = { group = "org.apache.hive", name = "hive-exec", version.ref = "hive2"}
 airlift-units = { group = "io.airlift", name = "units", version.ref = "airlift-units"}
 airlift-log = { group = "io.airlift", name = "log", version.ref = "airlift-log"}
 hadoop2-common = { group = "org.apache.hadoop", name = "hadoop-common", version.ref = "hadoop2"}
