[#104] Add rat plugin to check for missing headers (#119)
### What changes were proposed in this pull request?

Added rat plug-in and configuration to Gradle build files.

### Why are the changes needed?

So that the build fails when files are missing headers. You can also
look at rat reports to check licensing.

Fix: #104

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

Tested gradlew clean build and gradlew clean rat worked locally.

---------

Co-authored-by: Justin Mclean <justin@datastrato.com>
Co-authored-by: xunliu <xun@datastrato.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,3 +1,7 @@
+#
+# Copyright 2023 Datastrato.
+# This software is licensed under the Apache License version 2.
+#
 [versions]
 junit = "5.8.1"
 protoc = "3.17.3"
@@ -24,6 +28,8 @@ protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
 gradle-extensions-plugin = '1.74'
 publish-plugin = '1.1.0'
+rat-plugin = '0.8.0'
+
 
 [libraries]
 protobuf-java = { group = "com.google.protobuf", name = "protobuf-java", version.ref = "protoc" }
@@ -77,3 +83,4 @@ protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless-plugin" }
 gradle-extensions = { id = "com.github.vlsi.gradle-extensions", version.ref = "gradle-extensions-plugin" }
 publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish-plugin" }
+rat = { id = "org.nosphere.apache.rat", version.ref = "rat-plugin" }
