disable update comment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,4 +43,4 @@ jobs:
           pass-emoji: ':green_circle:'
           fail-emoji: ':red_circle:'
           debug-mode: true
-          update-comment: true
+          update-comment: false
