[IMPROVEMENT] Add log4j2 xml configuration file to set log level and log file

--- a/core/src/test/resources/log4j2.properties
+++ b/core/src/test/resources/log4j2.properties
@@ -3,6 +3,7 @@
 # This software is licensed under the Apache License version 2.
 #
 
+## Anyone who wants to want to output in test can copy this file to the related module path: test/resources/log4j2.xml
 status = error
 name = PropertiesConfig
 
