execute graviton.sh success

--- a/conf/log4j2.properties
+++ b/conf/log4j2.properties
@@ -6,13 +6,13 @@
 status = warn
 
 # Log files location
-property.basePath = ${graviton.log.path}
+property.basePath = ${sys:graviton.log.path}
 
 # RollingFileAppender name, pattern, path and rollover policy
 appender.rolling.type = RollingFile
 appender.rolling.name = fileLogger
-appender.rolling.fileName= ${graviton.log.path}/graviton-server.log
-appender.rolling.filePattern= ${graviton.log.path}/graviton-server_%d{yyyyMMdd}.log.gz
+appender.rolling.fileName = ${basePath}/graviton-server.log
+appender.rolling.filePattern = ${basePath}/graviton-server_%d{yyyyMMdd}.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%l] - %msg%n
 appender.rolling.policies.type = Policies
