--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,3 +57,16 @@ jobs:
         run: |
           echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
           echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+
+      - name: Package with Gradle
+        run: |
+          gradle assembleDistribution
+          ls -l distribution/package
+          distribution/package/bin/graviton.sh start
+          curl -I -m 5 -o /dev/null -s -w %{http_code} http://127.0.0.1:8090/health
+          if [ ${http_code} -ne 200 ]; then
+            echo "Failed to start graviton"
+            exit 1
+          fi
+          distribution/package/bin/graviton.sh stop
+          distribution/package/bin/graviton.sh status
