--- a/conf/graviton-env.sh.template
+++ b/conf/graviton-env.sh.template
@@ -8,6 +8,6 @@
 
 # export JAVA_HOME
 # export GRAVITON_HOME
+# export GRAVITON_CONF_DIR
 # export GRAVITON_LOG_DIR     # Where log files are stored.  PWD by default.
-# export GRAVITON_PID_DIR     # The pid files are stored. ${GRAVITON_HOME}/run by default.
 # export GRAVITON_MEM         # Graviton jvm mem options Default -Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m
