Add project version restful API

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
           gradle assembleDistribution
           ls -l distribution/package
           distribution/package/bin/graviton.sh start
-          curl -I -m 5 -o /dev/null -s -w %{http_code} http://127.0.0.1:8090/health
+          curl -I -m 5 -o /dev/null -s -w %{http_code} http://127.0.0.1:8090/version
           if [ ${http_code} -ne 200 ]; then
             echo "Failed to start graviton"
             exit 1
