--- a/conf/graviton.conf.template
+++ b/conf/graviton.conf.template
@@ -3,19 +3,30 @@
 # This software is licensed under the Apache License version 2.
 #
 
-# The configuration for Graviton Server
-graviton.server.webserver.host                127.0.0.1 # The host name of the built-in web server
-graviton.server.webserver.httpPort            8090      # The http port number of the built-in web server
-graviton.server.webserver.coreThreads         24        # The core thread size of the built-in web server
-graviton.server.webserver.maxThreads          200       # The max thread size of the built-in web server
-graviton.server.webserver.stopIdleTimeout     30000     # The stop idle timeout of the built-in web server
-graviton.server.webserver.requestHeaderSize   131072    # The request header size of the built-in web server
-graviton.server.webserver.responseHeaderSize  131072    # The response header size of the built-in web server
+# THE CONFIGURATION FOR GRAVITON SERVER
+# The host name of the built-in web server
+graviton.server.webserver.host = 127.0.0.1
+# The http port number of the built-in web server
+graviton.server.webserver.httpPort = 8090
+# The core thread size of the built-in web server
+graviton.server.webserver.coreThreads = 24
+# The max thread size of the built-in web server
+graviton.server.webserver.maxThreads = 200
+# The stop idle timeout of the built-in web server
+graviton.server.webserver.stopIdleTimeout = 30000
+# The request header size of the built-in web server
+graviton.server.webserver.requestHeaderSize = 131072
+# The response header size of the built-in web server
+graviton.server.webserver.responseHeaderSize = 131072
 
-# The configuration for Graviton entity store
-graviton.entity.store                         kv                # The entity store to use
-graviton.entity.store.kv                      RocksDBKvBackend  # The RocksDB entity store
-graviton.entity.store.kv.rocskdb.path         /tmp/graviton     # The RocksDB backend path for entity store
+# THE CONFIGURATION FOR GRAVITON ENTITY STORE
+# The entity store to use
+graviton.entity.store = kv
+# The RocksDB entity store
+graviton.entity.store.kv = RocksDBKvBackend
+# The RocksDB backend path for entity store
+graviton.entity.store.kv.rocskdb.path = /tmp/graviton
 
-# The configuration for Graviton catalog
-graviton.catalog.cache.evictionIntervalMs     3600000           # The interval in milliseconds to evict the catalog cache
+# THE CONFIGURATION FOR GRAVITON CATALOG
+# The interval in milliseconds to evict the catalog cache
+graviton.catalog.cache.evictionIntervalMs = 3600000
