--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Package with Gradle
         run: |
           gradle assembleDistribution
-          ls -l distribution/package
+          ls -lt distribution/package
           distribution/package/bin/graviton.sh start
           curl -I -m 5 -o /dev/null -s -w %{http_code} http://127.0.0.1:8090/version
           if [ ${http_code} -ne 200 ]; then
@@ -70,3 +70,9 @@ jobs:
           fi
           distribution/package/bin/graviton.sh stop
           distribution/package/bin/graviton.sh status
+
+      - name: Integration Tests
+        run: |
+          ls -lt ./
+          ls -lt distribution/package
+          gradle integrationTest
