--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Package with Gradle
         run: |
-          gradle assembleDistribution
+          gradle compileDistribution
           ls -l distribution/package
           distribution/package/bin/graviton.sh start
           curl -I -m 5 -o /dev/null -s -w %{http_code} http://127.0.0.1:8090/version
