--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -37,23 +37,7 @@ jobs:
       - name: Show gradle version
         run: gradle --version
 
-      - name: Build with Gradle
-        run: gradle build
-
-      - name: Jacoco Report to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6
-        with:
-          paths: ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 40
-          min-coverage-changed-files: 60
-          title: 'Code Coverage Report'
-          debug-mode: false
-          update-comment: true
-          pass-emoji: ':green_circle:'
-          fail-emoji: ':red_circle:'
-      - name: Get the Coverage info
+      - name: Package Graviton
         run: |
-          echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
-          echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+          gradle build
+          gradle compileDistribution
