--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   HIVE_IMAGE_NAME: datastrato/graviton-ci-hive
-  HIVE_IMAGE_TAG_NAME: 0.1.0
+  HIVE_IMAGE_TAG_NAME: 0.1.1
 
 concurrency:
   group: ${{ github.worklfow }}-${{ github.event.pull_request.number || github.ref }}
@@ -36,10 +36,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Build the hive Docker image for AMD64
         if: ${{ contains(github.event.pull_request.labels.*.name, 'build docker image') }}
@@ -66,6 +66,15 @@ jobs:
       - name: Setup Debug Action
         if: ${{ contains(github.event.pull_request.labels.*.name, 'debug action') }}
         uses: csexton/debugger-action@master
+
+      - name: Check Hive server status
+        uses: nick-fields/retry@v2
+        with:
+          max_attempts: 10
+          retry_on: error
+          timeout_seconds: 3000
+          command: |
+            docker exec -i ${DOCKER_RUN_NAME} bash /tmp/check-status.sh
 
       - name: Integration Test
         run: |
