--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Integration Test
         run: |
-          docker exec -it ${DOCKER_RUN_NAME} bash /tmp/check-status.sh 300
+          docker exec -i ${DOCKER_RUN_NAME} bash /tmp/check-status.sh 300
           check_result=$?
           if [[ ${check_result} -eq 0 ]]; then
             echo "Hive server ready"
